# darket

./: README.md  components.d.ts  dfx.json  index.html  package-lock.json  package.json  roadmap.md  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: Cargo.toml  backend.did
backend/src/: lib.rs
src/: App.vue  main.ts  routes.ts
src/components/: Footer.vue  Items.vue  NavBar.vue
src/composables/: useEmitter.ts
src/pages/: CartPage.vue  CreateProduct.vue  Home.vue  ManageProducts.vue  ProductSingle.vue
